update unit tests to be cleaner and actually test specific behaviors